# tai-assignment3-group8

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  db_size_benchmark.py  download_musics.py  graphs.ipynb  requirements.txt  transform.py
GetMaxFreqs/: getfreqs.py
GetMaxFreqs/src/: GetMaxFreqs.cpp
data/: benchmark.csv  db_size_benchmark.csv
data/results/: ambience_bzip2.csv  ambience_gzip.csv  ambience_lzma.csv  ambience_zstd.csv  db_size_10_bzip2.csv  db_size_10_gzip.csv  db_size_10_lzma.csv  db_size_10_zstd.csv  db_size_15_bzip2.csv  db_size_15_gzip.csv  db_size_15_lzma.csv  db_size_15_zstd.csv  db_size_1_bzip2.csv  db_size_1_gzip.csv  db_size_1_lzma.csv  db_size_1_zstd.csv  db_size_20_bzip2.csv  db_size_20_gzip.csv  db_size_20_lzma.csv  db_size_20_zstd.csv  db_size_25_bzip2.csv  db_size_25_gzip.csv  db_size_25_lzma.csv  db_size_25_zstd.csv  db_size_30_bzip2.csv  db_size_30_gzip.csv  db_size_30_lzma.csv  db_size_30_zstd.csv  db_size_35_bzip2.csv  db_size_35_gzip.csv  db_size_35_lzma.csv  db_size_35_zstd.csv  db_size_40_bzip2.csv  db_size_40_gzip.csv  db_size_40_lzma.csv  db_size_40_zstd.csv  db_size_45_bzip2.csv  db_size_45_gzip.csv  db_size_45_lzma.csv  db_size_45_zstd.csv  (+184 more)
example/: log.csv  log.txt
example/database/: gzip.cache  lzma.cache
src/: what_the_music.cpp
src/engine/: compressor.cpp  compressor.h  database.cpp  database.h
src/util/: csv_logger.cpp  csv_logger.h  file_reader.cpp  file_reader.h  program_arguments.cpp  program_arguments.h
